format code and add more configs

--- a/common/vscode/settings.json
+++ b/common/vscode/settings.json
@@ -4,6 +4,7 @@
 	"editor.minimap.enabled": false,
 	"editor.tabSize": 4,
 	"editor.autoIndent": "full",
+	"editor.formatOnSave": true,
 	"extensions.ignoreRecommendations": false,
 	"vsicons.dontShowNewVersionMessage": true,
 	"files.associations": {
