--- a/work/vscode/settings.json
+++ b/work/vscode/settings.json
@@ -1,5 +1,11 @@
 {
     "[yaml]": {
         "editor.defaultFormatter": null
+    },
+    "github.copilot.enable": {
+        "*": false,
+        "plaintext": false,
+        "markdown": false,
+        "scminput": false
     }
 }
