--- a/work/vscode/settings.json
+++ b/work/vscode/settings.json
@@ -6,6 +6,7 @@
         "*": false,
         "plaintext": false,
         "markdown": false,
-        "scminput": false
+        "scminput": false,
+        "python": true
     }
 }
