--- a/common/vscode/settings.json
+++ b/common/vscode/settings.json
@@ -114,6 +114,9 @@
 	"[json]": {
 		"editor.defaultFormatter": "vscode.json-language-features"
 	},
+	"[dockerfile]": {
+		"editor.defaultFormatter": "ms-azuretools.vscode-containers"
+	},
 	"[go]": {
 		"editor.insertSpaces": true,
 		"editor.formatOnSave": true,
